force-app/main/default/objects/Leaderboard_Snapshot__c/Leaderboard_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Point-in-time leaderboard for a session.</description>
    <label>Leaderboard Snapshot</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Leaderboard Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaderboard Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>