force-app/main/default/objects/Leaderboard_Snapshot__c/fields/Game_Session__c.field-meta.xml
<CustomField>
    <fullName>Game_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game Session</label>
    <referenceTo>Game_Session__c</referenceTo>
    <relationshipLabel>Game Session</relationshipLabel>
    <relationshipName>Leaderboard_Snapshots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>