force-app/main/default/objects/Leaderboard_Snapshot__c/fields/Posted_To_Slack__c.field-meta.xml
<CustomField>
    <fullName>Posted_To_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted To Slack</label>
    <type>Checkbox</type>
</CustomField>