force-app/main/default/objects/Leaderboard_Snapshot__c/fields/Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Number__c</fullName>
    <label>Round Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>