force-app/main/default/objects/Leaderboard_Snapshot__c/fields/Slack_Message_Ts__c.field-meta.xml
<CustomField>
    <fullName>Slack_Message_Ts__c</fullName>
    <label>Slack Message Ts</label>
    <length>40</length>
    <type>Text</type>
</CustomField>