force-app/main/default/objects/Leaderboard_Snapshot__c/fields/Snapshot_JSON__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_JSON__c</fullName>
    <label>Snapshot JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>